--- a/cadastro/templates/cadastro/lista_marcaroupas.html
+++ b/cadastro/templates/cadastro/lista_marcaroupas.html
@@ -56,7 +56,7 @@
 
 <div class="row">
     <div class="col">
-        <h1>Lista de Marca de Roupas</h1>
+        <h1>Cadastro de Marca de Roupas</h1>
     </div>
 </div>
 
