--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap/css/sla.css' %}">
-    <title>Document</title>
+    <title>Sisroupas</title>
 </head>
 <body>
 
